--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "sequelize": "^3.30.2",
+    "sqlite3": "^3.1.8"
   }
 }
