--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "file-system": "^2.2.2",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "fs": "0.0.1-security"
   }
 }
